# 04mcFlsk

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
adapters/: auth.py  repositories.py  routes.py
entities/: user.py
tests/: test_api.py
uploads/: .gitkeep
use_cases/: user_use_cases.py
